Changed default benchmark scale, added "known issues"